<resources>
    <string name="app_name">Simon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="score_label">Sc:</string>
    <string name="round_label">Rd:</string>
    <string name="highscore_label">Hs:</string>

    <string name="zero">0</string>

    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_main_activity">main_activity</string>

    <string name ="New_Game">New Game</string>
    <string name = "leaderboard">Leaderboard</string>
    <string name ="Settings">Settings</string>
    <string name="title_activity_settings">settings</string>
</resources>
