<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SimonFragment"
    android:background="#cdc9c9">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cdc9c9">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/score_label"
            android:layout_weight="1"
            android:textColor="#000000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/zero"
            android:layout_weight="1"
            android:id="@+id/score"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/round_label"
            android:layout_weight="1"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/zero"
            android:layout_weight="1"
            android:id="@+id/round"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/highscore_label"
            android:layout_weight="2"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/highscore_label"
            android:layout_weight="1"
            android:id="@+id/highScore"
            android:textColor="#000000" />

    </LinearLayout>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/green"
                android:id="@+id/button_green"
                android:layout_weight="1"
                android:background="#006400"
                android:contextClickable="false"
                android:clickable="true" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/red"
                android:id="@+id/button_red"
                android:layout_weight="1"
                android:background="#640000"
                android:contextClickable="false"
                android:clickable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/yellow"
                android:id="@+id/button_yellow"
                android:layout_weight="1"
                android:background="#646400"
                android:contextClickable="false"
                android:clickable="true" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/blue"
                android:id="@+id/button_blue"
                android:layout_weight="1"
                android:background="#000064"
                android:clickable="true"
                android:contextClickable="false" />

        </TableRow>

</LinearLayout>
